# bug-v3

./: .claude-agents.json  .env  .env.mcp  .eslint-output.json  .eslintrc.userscript.js  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REORGANIZATION_PLAN.md  AUTODOWNLOAD_MIGRATION.md  AUTONOMOUS_SCRIPTS.md  BUILD_FLAGS.md  CHANGELOG.md  CHAT_HISTORY_AND_RESIZABLE_CONTAINER_FIX.md  CLAUDE.md  CLOUDFLARE_SYNC_UPDATE.md  CONTRIBUTING.md  EMOJI_MERGE_REPORT.md  EMOJI_PICKER_OPTIMIZATION_SUMMARY.md  FEATURE_VERIFICATION.md  GEMINI.md  GEMINI_FEATURES.md  HTML_OUTPUT_FORMAT_REPORT.md  IMAGE_GENERATOR_README.md  INTELLIGENT_INJECTION.md  LAZY_LOADING_COMPLETE.md  LICENSE-zh.md  LICENSE.md  LOGGING.md  MCP_README.md  OPTIMIZATION_SUMMARY.md  PERMISSIONS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REFACTORING_REPORT.md  REFACTOR_SUMMARY.md  (+62 more)
.claude/: plugins.json  settings.local.json
.github/: EDGE_STORE_SETUP.md
background/: background.ts
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
content/: EmojiPicker.vue  content.ts  emoji-data.ts  main.jsx  picker-styles.css  styles.css
dist-firefox/: manifest-firefox.json  options.html
docs/: README.md  (+52 more)
gemini-web-service/: Cargo.toml  Dockerfile  README.md  config.example.toml  run.sh
gemini-web-service/frontend/: index.html
gemini-web-service/frontend/static/: app.js
gemini-web-service/src/: config.rs  gemini.rs  main.rs  workspace.rs
scripts/wasm/: Cargo.toml  build.sh  package.json  perceptual_hash.c
scripts/wasm/src/: lib.rs
(+2086 files in other folders)
