[package]
name = "gemini-web-service"
version = "0.1.0"
edition = "2021"
description = "Web service providing Gemini CLI functionality"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
